# ist-airport-decision-support-system

./: .gitignore  LICENSE  README.md  deneme_.ipynb  main.py  pyproject.toml  requirements.txt
docs/: data_arch.drawio
src/eda/: eda.ipynb  embedding_quality_check.ipynb
src/ingestion/: flight_information_data_merger.py  flight_information_scrapper.py  merge_traj.py  trajectory_processor.py
src/llm_delay/: build_splits.py  config.py  dataset.py  debug_run.py  evaluate.py  llm_training_setup.ipynb  main.py  model.py  model_analysis.ipynb  monthly_model_evaluation.ipynb  prompting.py  train.py  utils.py
src/modeling/: atscc_training.ipynb  export_full_embeddings.py
src/modeling/atscc/: atscc_training.ipynb  embedding_viz.ipynb
src/processing/: build_traj_scenarios.py  flight_bronze_to_silver.ipynb  flight_silver_to_gold.ipynb  merge_all_data.ipynb  merge_traj.py  merge_traj_scenarios.ipynb  scenario_prompt_builder.py  trajectory03.ipynb  trajectory03bronze_to_silver.ipynb  trajectory_bronze_to_silver.ipynb  trajectory_bronze_to_silver.py  trajectory_silver_to_gold.ipynb  weather.ipynb
